Version 0.2.0 - released 03/dd/18
=================================

 - Initial release

   - Change Android Controller -> WebServiceSerial: Now use WebService to reuse WebService methods
   - Defined Target: Initial target is Android, but is possible implements other targets for communication with other devices, as Arduino via USB Serial communication
   - Try reconnect when connection is closed
   - Check if is ADB has installed
   - Try download the ADB if isn't installed